# winunlock

./: .gitignore  AUTO_BUILD_WORKFLOW.md  CMakeLists.txt  CMakeLists.txt.backup  Credential.cpp  Credential.h  CredentialProvider.cpp  CredentialProvider.cpp.success  CredentialProvider.h  DEPLOYMENT.md  FULLY_AUTO_GUIDE.md  FULL_AUTOMATION_GUIDE.md  GITHUB_WORKFLOWS_GUIDE.md  HOW_TO_START.md  QUICKSTART.md  README.md  README_AUTO_START.md  SetPassword.ps1  TEST_WORKFLOWS.md  WinUnlock.def  WinUnlockService.cpp  WinUnlockService.h  configure.bat  dllmain.cpp  index.html  init-git.ps1  init-git.sh  install-service.ps1  install.bat  package.json  pch.h  register.ps1  setup-git.bat  setup-git.sh  tauri.conf.json  uninstall-service.ps1  uninstall.bat  unregister.ps1  vite.config.js  winunlock.def  (+2 more)
.cursor/: auto-build-instructions.md  auto-build-until-success.md  auto-fix-workflow.md  check-build-status.md  commands.json  fully-auto-workflow.md  wait-build-guide.md  workflow-example.md
.github/workflows/: build.yml  build.yml.success
config-ui/: index.html  main.js  styles.css
scripts/: README.md  auto-build-and-wait.js  auto-build-check.js  auto-build-until-success.js  auto-fix-loop.sh  check-build-status.js  check-workflow.js  cursor-auto-fix.md  extract-build-errors.js  fully-auto-build.js  get-workflow-logs.js  quick-auto-fix.sh  start-auto-build.sh  wait-and-check.js  wait-for-build.js
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
tauri-app/: package.json  tauri.conf.json
tauri-app/src-tauri/: Cargo.toml
tauri-app/src-tauri/src/: main.rs
