[package]
name = "winunlock-config"
version = "1.0.0"
description = "WinUnlock 凭据提供程序配置工具"
authors = ["WinUnlock Team"]
license = "MIT"
repository = "https://github.com/hello--world/winunlock"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = { version = "0.50", features = ["serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

